--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -43,8 +46,11 @@
   ],
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
+    "eslint-plugin-react": "^7.20.6",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.2",
     "purgecss": "^2.3.0",
