--- a/package.json
+++ b/package.json
@@ -9,23 +9,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/redux": "^3.6.0",
-    "@types/redux-saga": "^0.10.5",
+    "hookrouter": "^1.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "build:css": "NODE_ENV=production postcss src/styles/core/main.css -o src/styles/build/index.css",
@@ -45,15 +37,29 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.9",
+    "@types/react": "16.9.4",
+    "@types/react-dom": "16.9.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "@types/styled-components": "^4.1.19",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@types/hookrouter": "^2.2.3",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
+    "babel-plugin-macros": "^2.6.1",
+    "react-hot-loader": "^4.12.15",
+    "tailwind.macro": "^1.0.0-alpha.10",
+    "tailwindcss": "^1.1.2",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "typescript": "3.6.3",
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
     "eslint-plugin-react": "^7.20.6",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.2",
-    "purgecss": "^2.3.0",
-    "tailwindcss": "^1.7.6"
+    "purgecss": "^2.3.0"
   }
 }
