--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
-        "hookrouter": "^1.2.3",
+        "@types/axios": "^0.14.0",
+        "@types/react-router-dom": "^5.1.6",
+        "axios": "^0.21.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
@@ -25,10 +28,15 @@
         "react:dev": "sleep 5 && react-scripts start",
         "react:build": "react-scripts build",
         "build": "run-s build:css react:build",
-        "start": "run-p watch:css react:dev"
+        "start": "run-p watch:css react:dev",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
-        "extends": "react-app"
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "browserslist": [
         ">0.2%",
@@ -38,28 +46,30 @@
     ],
     "devDependencies": {
         "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
+        "@fullhuman/postcss-purgecss": "^2.3.0",
+        "@types/hookrouter": "^2.2.3",
         "@types/jest": "24.0.18",
         "@types/node": "12.7.9",
         "@types/react": "16.9.4",
         "@types/react-dom": "16.9.1",
-        "@typescript-eslint/parser": "^4.0.1",
-        "@types/styled-components": "^4.1.19",
-        "@typescript-eslint/eslint-plugin": "^4.0.1",
-        "@types/hookrouter": "^2.2.3",
         "@types/react-redux": "^7.1.9",
         "@types/redux": "^3.6.0",
         "@types/redux-saga": "^0.10.5",
+        "@types/styled-components": "^4.1.19",
+        "@typescript-eslint/eslint-plugin": "^4.0.1",
+        "@typescript-eslint/parser": "^4.0.1",
+        "autoprefixer": "^9.8.6",
         "babel-plugin-macros": "^2.6.1",
+        "cssnano": "^4.1.10",
+        "eslint-plugin-react": "^7.20.6",
+        "gh-pages": "^3.1.0",
+        "npm-run-all": "^4.1.5",
+        "postcss-cli": "^7.1.2",
+        "purgecss": "^2.3.0",
         "react-hot-loader": "^4.12.15",
         "tailwind.macro": "^1.0.0-alpha.10",
         "tailwindcss": "^1.1.2",
-        "@fullhuman/postcss-purgecss": "^2.3.0",
         "typescript": "3.6.3",
-        "autoprefixer": "^9.8.6",
-        "cssnano": "^4.1.10",
-        "eslint-plugin-react": "^7.20.6",
-        "npm-run-all": "^4.1.5",
-        "postcss-cli": "^7.1.2",
-        "purgecss": "^2.3.0"
+        "web-vitals": "^1.0.1"
     }
 }
