--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+.next
 
 # testing
 /coverage
 
 # production
 /build
+/src/styles/build
 
 # misc
 .DS_Store
@@ -21,3 +23,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+.eslintcache
+
