--- a/package.json
+++ b/package.json
@@ -1,75 +1,65 @@
 {
-    "name": "boilerplate",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.30",
-        "@fortawesome/free-solid-svg-icons": "^5.14.0",
-        "@fortawesome/react-fontawesome": "^0.1.11",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "@types/axios": "^0.14.0",
-        "@types/react-router-dom": "^5.1.6",
-        "axios": "^0.21.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.1",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
-        "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8",
-        "redux-saga": "^1.1.3",
-        "styled-components": "^5.1.1"
-    },
-    "scripts": {
-        "build:css": "NODE_ENV=production postcss src/styles/core/main.css -o src/styles/build/index.css",
-        "watch:css": "postcss src/styles/core/main.css -o src/styles/build/index.css --watch",
-        "react:dev": "sleep 5 && react-scripts start",
-        "react:build": "react-scripts build",
-        "build": "run-s build:css react:build",
-        "start": "run-p watch:css react:dev",
-        "predeploy": "yarn build",
-        "deploy": "gh-pages -d build"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
+  "name": "buidlerplate",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "next": "^10.0.5",
+    "next-images": "^1.7.0",
+    "prettier": "^2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-localstorage-simple": "^2.3.1",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "devDependencies": {
-        "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-        "@fullhuman/postcss-purgecss": "^2.3.0",
-        "@types/hookrouter": "^2.2.3",
-        "@types/jest": "24.0.18",
-        "@types/node": "12.7.9",
-        "@types/react": "16.9.4",
-        "@types/react-dom": "16.9.1",
-        "@types/react-redux": "^7.1.9",
-        "@types/redux": "^3.6.0",
-        "@types/redux-saga": "^0.10.5",
-        "@types/styled-components": "^4.1.19",
-        "@typescript-eslint/eslint-plugin": "^4.0.1",
-        "@typescript-eslint/parser": "^4.0.1",
-        "autoprefixer": "^9.8.6",
-        "babel-plugin-macros": "^2.6.1",
-        "cssnano": "^4.1.10",
-        "eslint-plugin-react": "^7.20.6",
-        "gh-pages": "^3.1.0",
-        "npm-run-all": "^4.1.5",
-        "postcss-cli": "^7.1.2",
-        "purgecss": "^2.3.0",
-        "react-hot-loader": "^4.12.15",
-        "tailwind.macro": "^1.0.0-alpha.10",
-        "tailwindcss": "^1.1.2",
-        "typescript": "3.6.3",
-        "web-vitals": "^1.0.1"
-    }
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/redux-saga": "^0.10.5",
+    "@types/styled-components": "^5.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "postcss": "^8.2.4",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "react-hot-loader": "^4.13.0",
+    "tailwindcss": "^2.0.2",
+    "twin.macro": "^2.1.0",
+    "typescript": "^4.0.3"
+  }
 }
